changed branch for trigerring workflow (to main...)

--- a/.github/workflows/build-image-dh.yml
+++ b/.github/workflows/build-image-dh.yml
@@ -3,7 +3,7 @@ name: Build and publish container to dockerhub
 on:
   workflow_dispatch:
   push:
-    branches: [ master ]
+    branches: [ main ]
 
 jobs:
 
